9931
It already does this, but I guess it misses repl-defined classes.
```scala
scala> val x = scala.Mutable
<console>:7: error: object Mutable is not a member of package scala
Note: trait Mutable exists, but it has no companion object.
       val x = scala.Mutable
                     ^
```
